// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`textDecorationLine renders 0 1`] = `
Array [
  .c0 {
  -webkit-text-decoration-line: 0;
  text-decoration-line: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-line: 0;
  text-decoration-line: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-line: 0;
  text-decoration-line: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-line: 0;
  text-decoration-line: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationLine renders function 1`] = `
Array [
  .c0 {
  -webkit-text-decoration-line: hasnot;
  text-decoration-line: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-line: has;
  text-decoration-line: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-line: hasnot;
  text-decoration-line: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-line: has;
  text-decoration-line: has;
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationLine renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-text-decoration-line: invalid.path.1;
  text-decoration-line: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-line: invalid.path.1;
  text-decoration-line: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-line: invalid.path.1;
  text-decoration-line: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-line: invalid.path.1;
  text-decoration-line: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationLine renders negative number 1`] = `
Array [
  .c0 {
  -webkit-text-decoration-line: -54881;
  text-decoration-line: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-line: -54881;
  text-decoration-line: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-line: -42365;
  text-decoration-line: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-line: -42365;
  text-decoration-line: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationLine renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-line: July;
    text-decoration-line: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-line: August;
    text-decoration-line: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-line: September;
    text-decoration-line: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-text-decoration-line: November;
    text-decoration-line: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-line: July;
    text-decoration-line: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-line: August;
    text-decoration-line: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-line: September;
    text-decoration-line: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-text-decoration-line: November;
    text-decoration-line: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-line: May;
    text-decoration-line: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-line: June;
    text-decoration-line: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-line: April;
    text-decoration-line: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-text-decoration-line: November;
    text-decoration-line: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-line: May;
    text-decoration-line: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-line: June;
    text-decoration-line: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-line: April;
    text-decoration-line: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-text-decoration-line: November;
    text-decoration-line: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationLine renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    -webkit-text-decoration-line: July;
    text-decoration-line: July;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-line: August;
    text-decoration-line: August;
  }
}

@media January {
  .c0 {
    -webkit-text-decoration-line: September;
    text-decoration-line: September;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-line: November;
    text-decoration-line: November;
  }
}

@media June {
  .c0 {
    -webkit-text-decoration-line: August;
    text-decoration-line: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-text-decoration-line: July;
    text-decoration-line: July;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-line: August;
    text-decoration-line: August;
  }
}

@media January {
  .c0 {
    -webkit-text-decoration-line: September;
    text-decoration-line: September;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-line: November;
    text-decoration-line: November;
  }
}

@media June {
  .c0 {
    -webkit-text-decoration-line: August;
    text-decoration-line: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-text-decoration-line: January;
    text-decoration-line: January;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-line: December;
    text-decoration-line: December;
  }
}

@media January {
  .c0 {
    -webkit-text-decoration-line: April;
    text-decoration-line: April;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-line: May;
    text-decoration-line: May;
  }
}

@media June {
  .c0 {
    -webkit-text-decoration-line: June;
    text-decoration-line: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-text-decoration-line: January;
    text-decoration-line: January;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-line: December;
    text-decoration-line: December;
  }
}

@media January {
  .c0 {
    -webkit-text-decoration-line: April;
    text-decoration-line: April;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-line: May;
    text-decoration-line: May;
  }
}

@media June {
  .c0 {
    -webkit-text-decoration-line: June;
    text-decoration-line: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationLine renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-text-decoration-line: 54881;
  text-decoration-line: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-line: 54881;
  text-decoration-line: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-line: 42365;
  text-decoration-line: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-line: 42365;
  text-decoration-line: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationLine renders string 1`] = `
Array [
  .c0 {
  -webkit-text-decoration-line: July;
  text-decoration-line: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-line: July;
  text-decoration-line: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-line: June;
  text-decoration-line: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-line: June;
  text-decoration-line: June;
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationLine renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-text-decoration-line: DarkSlateBlue;
  text-decoration-line: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-line: DarkSlateBlue;
  text-decoration-line: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-line: DarkSlateBlue;
  text-decoration-line: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-line: DarkSlateBlue;
  text-decoration-line: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
